z-index navbar e mascote fixed

--- a/my-app/src/assets/css/home.css
+++ b/my-app/src/assets/css/home.css
@@ -7,7 +7,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: -49; 
+  z-index: -49;
   background-image: url("../imgs/Fundos/fundoPerfil.png");
 }
 #decorBackground {
@@ -21,7 +21,7 @@
 
 .mascotContainer {
   position: relative;
-  z-index: 1001;
+  z-index: 100;
   height: 80vh;
   display: flex;
   align-items: center;
